add more details to stored todos
