# api/pkg/api/data.go
@@ -3,6 +3,7 @@ package api
 import (
 	"context"
 	"database/sql"
+	"errors"
 	"fmt"
 
 	"github.com/chrispaynes/vorChall/proto/go/api/v1/todos"
@@ -14,7 +15,7 @@ import (
 // Data ...
 type Data interface {
 	AddTodo(ctx context.Context, req *todos.AddTodoRequest) (*todos.TodoResponse, error)
-	GetTodo(ctx context.Context, id int64) (*todos.TodoResponse, error)
+	GetTodo(ctx context.Context, id uint64) (*todos.TodoResponse, error)
 	GetTodos(ctx context.Context, req *empty.Empty) (*todos.TodosResponse, error)
 	UpdateTodo(ctx context.Context, req *todos.UpdateTodoRequest) (*todos.TodoResponse, error)
 	UpdateTodos(ctx context.Context, req *todos.UpdateTodosRequest) (*todos.TodosResponse, error)
@@ -29,10 +30,12 @@ type Conn struct {
 
 // Todo ...
 type Todo struct {
-	ID          int64          `db:"id"`
+	ID          uint64         `db:"todo_id"`
 	Title       sql.NullString `db:"title"`
 	Description sql.NullString `db:"description"`
 	Status      string         `db:"status"`
+	CreatedDT   sql.NullString `db:"created_dt"`
+	UpdatedDT   sql.NullString `db:"updated_dt"`
 }
 
 // NSString ...
@@ -44,24 +47,38 @@ func NSString(ns sql.NullString) string {
 	return ns.String
 }
 
+func newTodoResponse(t *Todo) *todos.TodoResponse {
+	return &todos.TodoResponse{
+		Id:          t.ID,
+		Title:       NSString(t.Title),
+		Description: NSString(t.Description),
+		CreatedDT:   NSString(t.CreatedDT),
+		UpdatedDT:   NSString(t.UpdatedDT),
+		Status:      t.Status,
+	}
+}
+
 // GetTodo ...
-func (c *Conn) GetTodo(ctx context.Context, id int64) (*todos.TodoResponse, error) {
+func (c *Conn) GetTodo(ctx context.Context, id uint64) (*todos.TodoResponse, error) {
 	log.Debugf("GetTodo() - ctx: %+v, id: %d", ctx, id)
 
 	t := &Todo{}
 
-	if err := c.DB.Get(t, fmt.Sprintf(`SELECT id, title, description, status FROM app.todo WHERE id = %d`, id)); err != nil {
+	query := `
+SELECT t.todo_id, t.title, t.description, t.created_dt, t.updated_dt, ts.status
+FROM app.todo t
+JOIN app.todo_status ts
+    ON t.status_id = ts.status_id
+WHERE todo_id = %d
+`
+
+	if err := c.DB.Get(t, fmt.Sprintf(query, id)); err != nil {
 		log.WithError(err).Errorf("failed to retrieve Todo with id %d", id)
 
 		return nil, fmt.Errorf("failed to retrieve Todo with id %d", id)
 	}
 
-	return &todos.TodoResponse{
-		Id:          t.ID,
-		Title:       NSString(t.Title),
-		Description: NSString(t.Description),
-		Status:      t.Status,
-	}, nil
+	return newTodoResponse(t), nil
 }
 
 // GetTodos ...
@@ -69,10 +86,18 @@ func (c *Conn) GetTodos(ctx context.Context, req *empty.Empty) (*todos.TodosResp
 	log.Debugf("GetTodos() - ctx: %+v", ctx)
 
 	t := Todo{}
-	rows, err := c.DB.Queryx("SELECT id, title, description, status FROM app.todo ORDER BY id DESC")
+
+	query := `
+SELECT t.todo_id, t.title, t.description, t.created_dt, t.updated_dt, ts.status
+FROM app.todo t
+JOIN app.todo_status ts
+    ON t.status_id = ts.status_id
+`
+	rows, err := c.DB.Queryx(query)
 
 	if err != nil {
-		log.Fatalln(err)
+		log.WithError(err).Error("failed to retrieve all Todos")
+		return nil, errors.New("failed to retrieve all Todos")
 	}
 
 	resp := []*todos.TodoResponse{}
@@ -80,15 +105,12 @@ func (c *Conn) GetTodos(ctx context.Context, req *empty.Empty) (*todos.TodosResp
 	for rows.Next() {
 		err := rows.StructScan(&t)
 		if err != nil {
-			log.Fatalln(err)
+			log.WithError(err).WithError(ErrScan("GetTodos"))
+
+			return nil, errors.New("failed to retrieve all todos")
 		}
 
-		resp = append(resp, &todos.TodoResponse{
-			Id:          t.ID,
-			Title:       NSString(t.Title),
-			Description: NSString(t.Description),
-			Status:      t.Status,
-		})
+		resp = append(resp, newTodoResponse(&t))
 	}
 
 	return &todos.TodosResponse{
